feat: added more about me

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anshul Daksh Portfolio </title>
+    <style>
+        .profile {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    this is Anshul Daksh
+    <div class="profile">
+        <h1 class="heading">Hello This is Anshul Daksh </h1>
+        <p> I am a 2020 Computer science graduate from Sagar</p>
+        <p>I am here to learn web dev from Tanay sir </p>
+
+
+    </div>
+
 </body>
 
 </html>
