@feat:added hobbies section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         .profile {
             text-align: center;
+
         }
     </style>
 </head>
@@ -19,6 +20,10 @@
         <p>I am here to learn web dev from Tanay sir </p>
 
 
+    </div>
+
+    <div class="hobbies">
+        <p>I loves to play cricket </p>
     </div>
 
 </body>
