--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anshul Daksh Portfolio </title>
     <link rel="stylesheet" href="styles.css">
-    <!--<style>
-        .profile {
-            text-align: center;
-
-        }
-    </style>-->
 
 </head>
 
@@ -43,6 +37,7 @@
     <h2>This is the second biggest</h2>
     <p> Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph.</p>
     <small>This is relatively smaller text</small>
+    <p> <strong>This para will have a bold</strong> </p>
 
     <hr>
 
