--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a href="/" class="primary-link link">Primary Link</a>
+    <a href="/" class="secondary-link link">Secondary Link</a>
 
     <hr>
 
