--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
 
     <h2>@links</h2>
 
-    <a href="/" class="primary-link link">Primary Link</a>
-    <a href="/" class="secondary-link link">Secondary Link</a>
+    <a href="/" class="link primary-link">Primary Link</a>
+    <a href="/" class="link secondary-link">Secondary Link</a>
 
     <hr>
 
     <h2>@lists</h2>
 
     <h3>unordered list</h3>
+    <p>This list will not have the bullet</p>
 
-    <ul>
+    <ul class="non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -72,9 +73,9 @@
     <h3> unordered inline list</h3>
 
     <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+        <li class="list-inline">Inline Item One</li>
+        <li class="list-inline">Inline Item Two</li>
+        <li class="list-inline">Inline Item Three</li>
     </ul>
 
     <h3> reverse ordered list</h3>
