--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
 
     <h2>@nav</h2>
 
-    <nav>
-        <div>iAmBrand</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+    <nav class="container navigation">
+
+        <div class="nav-brand ">iAmBrand</div>
+        <ul class="non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="/">home</a>
             </li>
-            <li>
-                <a href="/">products</a>
+            <li class="list-inline">
+                <a class="link" href="/">products</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-inline">
+                <a class="link" href="/">about</a>
             </li>
         </ul>
     </nav>
