--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="nav-brand ">iAmBrand</div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link" href="/">home</a>
+                <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-inline">
                 <a class="link" href="/">products</a>
@@ -110,9 +110,11 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="images/hero.svg" />
-        <h1>heading inside header</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg" />
+        <h1 class="hero-heading">
+            Anshul The <span class="heading-inverted"> Web developer</span>
+        </h1>
     </header>
 
     <hr>
