moved components to seprate folder
Now I started to work on integrating components

--- a/index.html
+++ b/index.html
@@ -4,147 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anshul Daksh Portfolio </title>
-    <link rel="stylesheet" href="styles.css">
-
+    <title>Home for Adarsh balika </title>
 </head>
 
 <body>
-    <div class="profile">
-        <h1 class="heading">Hello This is Anshul Daksh </h1>
-        <p> I am a 2020 Computer science graduate from Sagar</p>
-        <p>I am here to learn web dev from Tanay sir </p>
-
-
-    </div>
-
-    <div class="hobbies">
-        <p>I loves to play cricket </p>
-    </div>
-
-    <!-- now 2nd day sundat code start -->
-
-    <h1>tanay's component library</h1>
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
-    </p>
-
-    <hr>
-
-
-    <h2>@typography</h2>
-
-    <h1>This is the biggest heading</h1>
-    <h2>This is the second biggest</h2>
-    <p> Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph.</p>
-    <small>This is relatively smaller text</small>
-    <p> <strong>This para will have a bold</strong> </p>
-
-    <hr>
-
-    <h2>@container</h2>
-
-    <h3>fluid container</h3>
-    <div class="container container-fluid">This is a fluid container and it will go till the end of the page</div>
-
-    <h3>center container</h3>
-    <div class="container container-centered">This is a centered container and it will go till the specified width</div>
-
-    <hr>
-
-    <h2>@links</h2>
-
-    <a href="/" class="link primary-link">Primary Link</a>
-    <a href="/" class="link secondary-link">Secondary Link</a>
-
-    <hr>
-
-    <h2>@lists</h2>
-
-    <h3>unordered list</h3>
-    <p>This list will not have the bullet</p>
-
-    <ul class="non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-
-    </ul>
-
-    <h3> unordered inline list</h3>
-
-    <ul>
-        <li class="list-inline">Inline Item One</li>
-        <li class="list-inline">Inline Item Two</li>
-        <li class="list-inline">Inline Item Three</li>
-    </ul>
-
-    <h3> reverse ordered list</h3>
-
-    <ol>
-        <li>milk</li>
-        <li>eggs</li>
-        <li>break</li>
-    </ol>
-
-    <hr />
-
-    <h2>@nav</h2>
-
-    <nav class="container navigation">
-
-        <div class="nav-brand ">iAmBrand</div>
-        <ul class="non-bullet nav-pills">
-            <li class="list-inline">
-                <a class="link link-active" href="/">home</a>
-            </li>
-            <li class="list-inline">
-                <a class="link" href="/">products</a>
-            </li>
-            <li class="list-inline">
-                <a class="link" href="/">about</a>
-            </li>
-        </ul>
-    </nav>
-
-    <hr>
-
-    <h2>@header</h2>
-
-    <header class="hero">
-        <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">
-            Anshul The <span class="heading-inverted"> Web developer</span>
-        </h1>
-    </header>
-
-    <hr>
-    <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
-    </section>
-
-    <section>
-        <h3>off white section</h3>
-        <p>This will have gray background</p>
-    </section>
-
-    <hr>
-
-    <h2>@footer</h2>
-
-    <footer>
-        <div>Some small heading inside footer</div>
-        <ul>
-            <li>socialone</li>
-            <li>socialTwo</li>
-            <li>socialThree</li>
-        </ul>
-    </footer>
-
-    <!-- html done css start  -->
-
-
 
 </body>
 
