--- a/blogs.html
+++ b/blogs.html
@@ -14,13 +14,13 @@
         <div class="nav-brand ">Anshul Daksh </div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link " href="/">home</a>
             </li>
             <li class="list-inline">
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-inline">
-                <a class="link" href="/blogs.html">blogs</a>
+                <a class="link link-active" href="/blogs.html">blogs</a>
             </li>
         </ul>
     </nav>
