--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -32,6 +32,36 @@
         </h1>
     </header>
 
+    <ul class="non-bullet">
+        <li>
+            <div class="container container-centered">
+                <h1>Mirzapur fan ?</h1>
+                <small>November 2020</small>
+                <p>CLI app built with <strong>Nodejs , javascript</strong>
+                    .You can play if u are a fan of Mirzapur </p>
+
+                <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
+                    Live Project
+                </a>
+                <a class="link secondary-link" href="https://github.com/">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-centered">
+                <h1>how well do u know me</h1>
+                <small>November 2020</small>
+                <p>CLI app built with <strong>Nodejs , javascript</strong>
+                    . You can send this to your friends </p>
+
+                <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
+                    Live Project
+                </a>
+                <a class="link secondary-link" href="https://github.com/">View Source</a>
+            </div>
+
+        </li>
+    </ul>
 
 </body>
 
