feat:added blog section  style:added icons in the footer
Icons and blog added

--- a/blogs.html
+++ b/blogs.html
@@ -32,6 +32,30 @@
         </h1>
     </header>
 
+    <ul class="non-bullet">
+        <li>
+            <div class="container container-centered">
+                <h2> Why should u use react </h2>
+                <small>5 Nov 2020 </small>
+                <p>Are u still confused and wants to
+                    explore more that why we should use React when we can do it with Plain html , CSS and
+                    JS <span class="">read more...</span></p>
+
+            </div>
+
+            <div class="container container-centered">
+                <h2> Begineers guide to react routing </h2>
+                <small>5 Nov 2020 </small>
+                <p>Are u still confused and wants to
+                    explore more that why we should use React when we can do it with Plain html , CSS and
+                    JS <span>read more...</span></p>
+
+
+            </div>
+        </li>
+
+    </ul>
+
 
 </body>
 
