--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anshul Daksh</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -68,15 +69,19 @@
         <div class="footer-header">Online Presence </div>
         <ul class="social-links non-bullet list-inline">
             <li class="list-inline">
-                <a class="link" href="https://linkedin.com/anshuldaksh2016">
+                <a class="link fa fa-linkedin" href="https://linkedin.com/anshuldaksh2016">
                     LinkedIn</a>
             </li>
             <li class="list-inline">
-                <a class="link" href="https://github.com/anshuldaksh2016">github</a></li>
+                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">github</a></li>
 
             <li class="list-inline">
-                <a class="link" href="#">Insta</a></li>
+                <a class="link fa fa-youtube"
+                    href="https://www.youtube.com/channel/UC6Df3tfny-hNVd49fM-Zjzw?view_as=subscriber">Youtube</a>
+            </li>
+
         </ul>
+        <p>©anshuldaksh2016</p>
     </footer>
 
 </body>
