feat: footer in blog and projects page

--- a/blogs.html
+++ b/blogs.html
@@ -56,6 +56,25 @@
 
     </ul>
 
+    <footer class="footer">
+        <div class="footer-header">Online Presence </div>
+        <ul class="social-links non-bullet list-inline">
+            <li class="list-inline">
+                <a class="link fa fa-linkedin" href="https://linkedin.com/anshuldaksh2016">
+                    LinkedIn</a>
+            </li>
+            <li class="list-inline">
+                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">github</a></li>
+
+            <li class="list-inline">
+                <a class="link fa fa-youtube"
+                    href="https://www.youtube.com/channel/UC6Df3tfny-hNVd49fM-Zjzw?view_as=subscriber">Youtube</a>
+            </li>
+
+        </ul>
+        <p>©anshuldaksh2016</p>
+    </footer>
+
 
 </body>
 
