--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="container navigation">
 
-        <div class="nav-brand ">Anshul Daksh </div>
+        <div class="nav-brand">Anshul Daksh </div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
                 <a class="link link-active" href="/">home</a>
@@ -40,8 +40,46 @@
     <section class="section ow">
         <div class="container container-centered">
             <h1>Technologies</h1>
-            <p>I am familiar with HTML5 , CSS3 , Git ,
-                Javascript, Reactjs, Web hosting and Nodejs </p>
+            <!--<p>I am familiar with HTML5 , CSS3 , Git ,
+                Javascript, Reactjs, Web hosting and Nodejs </p>-->
+            <div class="skill-container">
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/html2.png" alt="">
+                    </div>
+                    <h4>HTML 5</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/css2.png" alt="">
+                    </div>
+                    <h4>CSS3</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/js.png" alt="">
+                    </div>
+                    <h4>Javascript</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/reactjs.png" alt="">
+                    </div>
+                    <h4>ReactJS</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/Github.webp" alt="">
+                    </div>
+                    <h4>Git and github</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/programming_nodejs_icon-128.png" alt="">
+                    </div>
+                    <h4>Nodejs</h4>
+                </div>
+            </div>
         </div>
     </section>
 
