--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
 
     <!-- header -->
     <header class="hero">
-        <img class="hero-img" src="images/hero3.svg" />
-        <h1 class="hero-heading">
-            Anshul The <span class="heading-inverted"> Web developer</span>
-        </h1>
+        <div class="slide">
+            <img class="hero-img" src="/images/undraw_feeling_proud_qne1.svg" />
+        </div>
+
+        <div class="hero-content">
+            <h5>Hey !!!</h5>
+            <h1> I am Anshul Daksh</h1>
+            <p>I am a aspiring web developer</p>
+        </div>
     </header>
 
     <!-- off white section -->
