style:hero fixed but not responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="hero-content">
             <h5>Hey !!!</h5>
             <h1> I am Anshul Daksh</h1>
-            <p>I am a aspiring web developer</p>
+            <p>An aspiring web developer</p>
+            <p>based in Sagar , Mp</p>
         </div>
     </header>
 
