--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- off white section -->
 
-    <section class="section ow">
+    <section class="section container">
         <div class="container container-centered">
             <h1>Technologies</h1>
             <!--<p>I am familiar with HTML5 , CSS3 , Git ,
