--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Anshul Daksh</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -43,11 +44,17 @@
 
     <!-- off white section -->
 
-    <section class="section container">
+    <section class="tech-area" id="tech">
         <div class="container container-centered">
-            <h1>Technologies</h1>
-            <!--<p>I am familiar with HTML5 , CSS3 , Git ,
-                Javascript, Reactjs, Web hosting and Nodejs </p>-->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="section-title">
+                        <h2>Technologies</h2>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="skill-container">
                 <div class="skill-box">
                     <div class="img">
