--- a/index.html
+++ b/index.html
@@ -45,15 +45,20 @@
     <!-- off white section -->
 
     <section class="tech-area" id="tech">
-        <div class="container container-centered">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="section-title">
-                        <h2>Technologies</h2>
-                    </div>
-                </div>
-            </div>
 
+
+
+
+
+
+
+
+
+
+
+
+        <!--<div class="container container-centered">
+           
 
             <div class="skill-container">
                 <div class="skill-box">
@@ -93,7 +98,8 @@
                     <h4>Nodejs</h4>
                 </div>
             </div>
-        </div>
+        </div>-->
+
     </section>
 
     <section class="section ow">
