new skills section heading

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
     <!-- off white section -->
 
-    <section class="tech-area" id="tech">
+    <section class="skill-container">
+        <div class="heading">
+            <h1>Skills</h1>
+        </div>
 
 
 
