--- a/index.html
+++ b/index.html
@@ -49,59 +49,81 @@
             <h1>Skills</h1>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-        <!--<div class="container container-centered">
-           
-
-            <div class="skill-container">
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/html2.png" alt="">
-                    </div>
-                    <h4>HTML 5</h4>
+        <div class="row">
+            <div class="card">
+                <div class="card-header">
+                    <h2>HTML</h2>
                 </div>
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/css2.png" alt="">
-                    </div>
-                    <h4>CSS3</h4>
-                </div>
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/js.png" alt="">
-                    </div>
-                    <h4>Javascript</h4>
-                </div>
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/reactjs.png" alt="">
-                    </div>
-                    <h4>ReactJS</h4>
-                </div>
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/Github.webp" alt="">
-                    </div>
-                    <h4>Git and github</h4>
-                </div>
-                <div class="skill-box">
-                    <div class="img">
-                        <img src="/images/programming_nodejs_icon-128.png" alt="">
-                    </div>
-                    <h4>Nodejs</h4>
+                <div class="card-body">
+                    <p>
+                        Basics of Html
+                    </p>
                 </div>
             </div>
-        </div>-->
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>CSS</h2>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Basics of CSS like flexbox and grid
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>Javascript</h2>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Javascript the Language
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>Git and github</h2>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Version control with git and github
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>React and Node</h2>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Basic knowledge of React and Nodejs
+                    </p>
+                </div>
+            </div>
+
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2> Node</h2>
+                </div>
+                <div class="card-body">
+                    <p>
+                        Nodejs and Express server side programming
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
 
     </section>
 
