--- a/lib/components.html
+++ b/lib/components.html
@@ -99,3 +99,49 @@
 </body>
 
 </html>
+
+
+<!-- 
+    <!--<div class="container container-centered">
+           
+
+            <div class="skill-container">
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/html2.png" alt="">
+                    </div>
+                    <h4>HTML 5</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/css2.png" alt="">
+                    </div>
+                    <h4>CSS3</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/js.png" alt="">
+                    </div>
+                    <h4>Javascript</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/reactjs.png" alt="">
+                    </div>
+                    <h4>ReactJS</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/Github.webp" alt="">
+                    </div>
+                    <h4>Git and github</h4>
+                </div>
+                <div class="skill-box">
+                    <div class="img">
+                        <img src="/images/programming_nodejs_icon-128.png" alt="">
+                    </div>
+                    <h4>Nodejs</h4>
+                </div>
+            </div>
+        </div>-->
+-->
