played with some styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <div class="card-header">
                     <h2>HTML</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/html2.png">
                     <p>
                         Basics of Html
                     </p>
@@ -66,8 +68,11 @@
                 <div class="card-header">
                     <h2>CSS</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/css2.png" alt="" srcset="">
                     <p>
+
                         Basics of CSS like flexbox and grid
                     </p>
                 </div>
@@ -78,7 +83,9 @@
                 <div class="card-header">
                     <h2>Javascript</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/js.png" alt="" srcset="">
                     <p>
                         Javascript the Language
                     </p>
@@ -90,7 +97,9 @@
                 <div class="card-header">
                     <h2>Git and github</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/Github.webp" alt="" srcset="">
                     <p>
                         Version control with git and github
                     </p>
@@ -100,11 +109,13 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h2>React and Node</h2>
+                    <h2>React</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/reactjs.png" alt="" srcset="">
                     <p>
-                        Basic knowledge of React and Nodejs
+                        Basic knowledge of React
                     </p>
                 </div>
             </div>
@@ -115,7 +126,9 @@
                 <div class="card-header">
                     <h2> Node</h2>
                 </div>
+
                 <div class="card-body">
+                    <img src="/images/programming_nodejs_icon-128.png" alt="" srcset="">
                     <p>
                         Nodejs and Express server side programming
                     </p>
@@ -127,7 +140,7 @@
 
     </section>
 
-    <section class="section ow">
+    <!--<section class="section ow">
         <div class="container container-centered">
             <h1>projects</h1>
             <p>I like to showcase my work so my projects are
@@ -144,7 +157,7 @@
                 so check them out .. </p>
             <a href="/" class="link secondary-link">Browse Blogs</a>
         </div>
-    </section>
+    </section>-->
 
 
     <footer class="footer">
