--- a/blogs.html
+++ b/blogs.html
@@ -26,36 +26,45 @@
         </ul>
     </nav>
 
-    <header class="hero">
+    <!-- blog section -->
+    <h1 class="section-title">
+        FROM MY BLOG
+    </h1>
 
-        <h1 class="hero-heading">
-            My Blogs<span class="heading-inverted"> </span>
-        </h1>
-    </header>
-
-    <ul class="non-bullet">
-        <li>
-            <div class="container container-centered">
+    <div class="blog-section">
+        <div class="blog-card">
+            <div class="blog-image">
+                <img src="/images/vdom.png">
+            </div>
+            <div class="blog-detail">
                 <h2> Why should u use react </h2>
                 <small>5 Nov 2020 </small>
-                <p>Are u still confused and wants to
-                    explore more that why we should use React when we can do it with Plain html , CSS and
-                    JS <span class="">read more...</span></p>
-
             </div>
+            <p>Are u still confused and wants to
+                explore more that why we should use React when we can do it with Plain html , CSS and
+                JS <span class="">read more...</span></p>
 
-            <div class="container container-centered">
-                <h2> Begineers guide to react routing </h2>
+        </div>
+        <div class="blog-card">
+            <div class="blog-image">
+                <img src="/images/vdom.png">
+            </div>
+            <div class="blog-detail">
+                <h4> Why should u use react </h4>
                 <small>5 Nov 2020 </small>
-                <p>Are u still confused and wants to
-                    explore more that why we should use React when we can do it with Plain html , CSS and
-                    JS <span>read more...</span></p>
-
-
             </div>
-        </li>
+            <p>Are u still confused and wants to
+                explore more that why we should use React when we can do it with Plain html , CSS and
+                JS <span class="">read more...</span></p>
 
-    </ul>
+        </div>
+
+    </div>
+
+
+
+
+
 
     <footer class="footer">
         <div class="footer-header">Online Presence </div>
