--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
         </div>
 
         <div class="hero-content">
-            <h5>Hey !!!</h5>
-            <h1> I am Anshul Daksh</h1>
+            <h3> Hi there </h3>
+            <h1>I am Anshul Daksh</h1>
+
             <p>An aspiring web developer</p>
-            <p>based in Sagar , Mp</p>
+
         </div>
     </header>
 
