--- a/projects.html
+++ b/projects.html
@@ -26,43 +26,44 @@
         </ul>
     </nav>
 
-    <header class="hero">
+    <section>
 
         <h1 class="hero-heading">
-            My Projects <span class="heading-inverted"> </span>
+            My Projects
         </h1>
-    </header>
 
-    <ul class="non-bullet">
-        <li>
-            <div class="container container-centered">
-                <h1>Mirzapur fan ?</h1>
-                <small>November 2020</small>
-                <p>CLI app built with <strong>Nodejs , javascript</strong>
-                    .You can play if u are a fan of Mirzapur </p>
 
-                <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
-                    Live Project
-                </a>
-                <a class="link secondary-link" href="https://github.com/">View Source</a>
-            </div>
-        </li>
+        <ul class="non-bullet">
+            <li>
+                <div class="container container-centered">
+                    <h1>Mirzapur fan ?</h1>
+                    <small>November 2020</small>
+                    <p>CLI app built with <strong>Nodejs , javascript</strong>
+                        .You can play if u are a fan of Mirzapur </p>
 
-        <li>
-            <div class="container container-centered">
-                <h1>how well do u know me</h1>
-                <small>November 2020</small>
-                <p>CLI app built with <strong>Nodejs , javascript</strong>
-                    . You can send this to your friends </p>
+                    <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
+                        Live Project
+                    </a>
+                    <a class="link secondary-link" href="https://github.com/">View Source</a>
+                </div>
+            </li>
 
-                <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
-                    Live Project
-                </a>
-                <a class="link secondary-link" href="https://github.com/">View Source</a>
-            </div>
+            <li>
+                <div class="container container-centered">
+                    <h1>how well do u know me</h1>
+                    <small>November 2020</small>
+                    <p>CLI app built with <strong>Nodejs , javascript</strong>
+                        . You can send this to your friends </p>
 
-        </li>
-    </ul>
+                    <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
+                        Live Project
+                    </a>
+                    <a class="link secondary-link" href="https://github.com/">View Source</a>
+                </div>
+
+            </li>
+        </ul>
+    </section>
 
     <footer class="footer">
         <div class="footer-header">Online Presence </div>
