feat:blog page added
fixed the blog page

--- a/blogs.html
+++ b/blogs.html
@@ -32,7 +32,8 @@
     </h1>
 
     <div class="blog-section">
-        <div class="blog-card">
+
+        <div class="blog-card container-centered">
             <div class="blog-image">
                 <img src="/images/vdom.png">
             </div>
@@ -43,19 +44,34 @@
             <p>Are u still confused and wants to
                 explore more that why we should use React when we can do it with Plain html , CSS and
                 JS <span class="">read more...</span></p>
+            <a href="https://anshuldaksh.hashnode.dev">Read more</a>
 
         </div>
-        <div class="blog-card">
+        <div class="blog-card container-centered">
             <div class="blog-image">
-                <img src="/images/vdom.png">
+                <img src="/images/react-routing.png">
             </div>
             <div class="blog-detail">
-                <h4> Why should u use react </h4>
-                <small>5 Nov 2020 </small>
+                <h2> Begineer's guide to React Routing </h2>
+                <small>1 Nov 2020 </small>
             </div>
-            <p>Are u still confused and wants to
-                explore more that why we should use React when we can do it with Plain html , CSS and
-                JS <span class="">read more...</span></p>
+            <p> So , React routing , allows us to build a single-page web application with navigation without the page
+                refreshing as the
+                user navigates. React Router uses component structure to call components, which display the appropriate
+                information....</p>
+            <a href="https://anshuldaksh.hashnode.dev">Read more</a>
+
+        </div>
+        <div class="blog-card container-centered">
+            <div class="blog-image">
+                <img src="/images/flexboxcover.png">
+            </div>
+            <div class="blog-detail">
+                <h4> Getting Started with CSS Flexbox </h4>
+                <small>Not publised </small>
+            </div>
+            <p>Do u want to learn css Flexbox read more.</p>
+            <a href="https://hashnode.com/preview/5fbf0366d73a0534d9b5186f">Read more </a>
 
         </div>
 
