style:color changed for skills heading

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="skill-container">
         <div class="heading">
-            <h1>Skills</h1>
+            <h1>technologies I know </h1>
         </div>
 
         <div class="row">
