--- a/projects.html
+++ b/projects.html
@@ -26,44 +26,92 @@
         </ul>
     </nav>
 
-    <section>
 
-        <h1 class="hero-heading">
-            My Projects
+    <header class="section-title">
+        <h1>
+            My Recent Projects
         </h1>
+    </header>
 
-
-        <ul class="non-bullet">
-            <li>
-                <div class="container container-centered">
-                    <h1>Mirzapur fan ?</h1>
-                    <small>November 2020</small>
-                    <p>CLI app built with <strong>Nodejs , javascript</strong>
-                        .You can play if u are a fan of Mirzapur </p>
-
-                    <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
-                        Live Project
-                    </a>
-                    <a class="link secondary-link" href="https://github.com/">View Source</a>
+    <section class="proj-timeline">
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Are U a Mirzapur fan ?</h2>
+                <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
+                <span>HTML-NODEJS-JAVASCRIPT</span>
+                <div class="proj-links">
+                    <a href="">Demo</a>
+                    <a href="" class="fa fa-github">Source</a>
                 </div>
-            </li>
+            </div>
 
-            <li>
-                <div class="container container-centered">
-                    <h1>how well do u know me</h1>
-                    <small>November 2020</small>
-                    <p>CLI app built with <strong>Nodejs , javascript</strong>
-                        . You can send this to your friends </p>
 
-                    <a class="link primary-link" href="https://repl.it/@DakshJi/proj1#index.js">
-                        Live Project
-                    </a>
-                    <a class="link secondary-link" href="https://github.com/">View Source</a>
+        </div>
+
+
+
+
+        <!--<div class="container">
+            <div class="timeline-item">
+                <div class="timeline-img">
+
                 </div>
+                <div class="timeline-content js--fadeInLeft">
+                    <h2>
+                        Are U a Mirzapur fan ?
+                    </h2>
+                    <div class="date">Nov 2020</div>
+                    <p>
+                        CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur
+                    </p>
+                    <a href="" class="link primary-link"></a>
+                </div>
+            </div>
 
-            </li>
-        </ul>
+            <div class="timeline-item">
+                <div class="timeline-img">
+
+                </div>
+                <div class="timeline-content js--fadeInLeft">
+                    <h2>
+                        how well do u know me
+                    </h2>
+                    <div class="date">Nov 2020</div>
+                    <p>
+                        CLI app built with Nodejs , javascript . You can send this to your friends
+                    </p>
+                    <a href="" class="link primary-link">Live</a>
+                    <a href="" class="link secondary-link">View Source</a>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-img">
+
+                </div>
+                <div class="timeline-content js--fadeInLeft">
+                    <h2>
+                        Github Cards
+                    </h2>
+                    <div class="date">Nov 2020</div>
+                    <p>
+                        Application to fetch the user information from github
+                    </p>
+                    <a href="" class="link secondary-link">View Source</a>
+                </div>
+            </div>-->
+
+        </div>
+
+
     </section>
+
+
+
+
+
 
     <footer class="footer">
         <div class="footer-header">Online Presence </div>
