--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
     <section class="proj-timeline">
         <div class="proj-card">
             <div class="proj-img">
-                <img src="" alt="">
+                <img src="/images/mirazpur.png" alt="">
             </div>
             <div class="proj-content">
                 <h2 class="proj-heading-1">Are U a Mirzapur fan ?</h2>
