style:project style fix

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         </h1>
     </header>
 
-    <section class="proj-timeline">
+    <section class="proj-timeline container-centered">
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images/mirazpur.png" alt="">
@@ -47,8 +47,34 @@
                     <a href="" class="fa fa-github">Source</a>
                 </div>
             </div>
-
-
+        </div>
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Do u know me quiz </h2>
+                <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
+                <span>HTML-NODEJS-JAVASCRIPT</span>
+                <div class="proj-links">
+                    <a href="">Demo</a>
+                    <a href="" class="fa fa-github">Source</a>
+                </div>
+            </div>
+        </div>
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images alt="">
+            </div>
+            <div class=" proj-content">
+                <h2 class="proj-heading-1">Github Cards App</h2>
+                <p>Application to fetch the user information from github</p>
+                <span>HTML-NODEJS-JAVASCRIPT</span>
+                <div class="proj-links">
+                    <a href="">Demo</a>
+                    <a href="" class="fa fa-github">Source</a>
+                </div>
+            </div>
         </div>
 
 
