style: project page style fix

--- a/projects.html
+++ b/projects.html
@@ -27,11 +27,11 @@
     </nav>
 
 
-    <header class="section-title">
-        <h1>
-            My Recent Projects
-        </h1>
-    </header>
+    <!-- projects section start -->
+    <h1 class="section-title">
+        My Recent Projects
+    </h1>
+
 
     <section class="proj-timeline container-centered">
         <div class="proj-card">
@@ -43,8 +43,8 @@
                 <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
                 <span>HTML-NODEJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="">Demo</a>
-                    <a href="" class="fa fa-github">Source</a>
+                    <a href="https://mirzapur-quiz.netlify.app/">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/mirzapur-quiz" class="fa fa-github">Source</a>
                 </div>
             </div>
         </div>
@@ -57,14 +57,14 @@
                 <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
                 <span>HTML-NODEJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="">Demo</a>
-                    <a href="" class="fa fa-github">Source</a>
+                    <a href="https://repl.it/@DakshJi/proj1#index.js">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/proj-1-neog-know-me" class="fa fa-github">Source</a>
                 </div>
             </div>
         </div>
         <div class="proj-card">
             <div class="proj-img">
-                <img src="/images alt="">
+                <img src="/images/github-cards.png" alt="github-card">
             </div>
             <div class=" proj-content">
                 <h2 class="proj-heading-1">Github Cards App</h2>
