style:project image fix

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
 
-    <nav class="container navigation">
+    <nav class="nav container navigation">
 
-        <div class="nav-brand">Anshul Daksh </div>
+        <div class="nav-brand">Anshul Daksh /></div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
                 <a class="link link-active" href="/">home</a>
@@ -42,6 +42,9 @@
 
         </div>
     </header>
+
+    <!-- About me section start -->
+
 
     <!-- off white section -->
 
