--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
             <div class="proj-content">
                 <h2 class="proj-heading-1">Do u know me quiz </h2>
                 <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
-                <span>HTML-NODEJS-JAVASCRIPT</span>
+                <span>NODEJS-JAVASCRIPT</span>
                 <div class="proj-links">
                     <a href="https://repl.it/@DakshJi/proj1#index.js">Demo</a>
                     <a href="https://github.com/anshuldaksh2016/proj-1-neog-know-me" class="fa fa-github">Source</a>
@@ -69,7 +69,7 @@
             <div class=" proj-content">
                 <h2 class="proj-heading-1">Github Cards App</h2>
                 <p>Application to fetch the user information from github</p>
-                <span>HTML-NODEJS-JAVASCRIPT</span>
+                <span>REACTJS-JAVASCRIPT</span>
                 <div class="proj-links">
                     <a href="">Demo</a>
                     <a href="" class="fa fa-github">Source</a>
