--- a/projects.html
+++ b/projects.html
@@ -71,72 +71,33 @@
                 <p>Application to fetch the user information from github</p>
                 <span>REACTJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="">Demo</a>
-                    <a href="" class="fa fa-github">Source</a>
+                    <a href="https://github.com/anshuldaksh2016/github-cards">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/github-cards" class="fa fa-github">Source</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images/google-clone.png" alt="github-card">
+            </div>
+            <div class=" proj-content">
+                <h2 class="proj-heading-1">Google Clone</h2>
+                <p>Simple google clone using html css </p>
+                <span>HTML-CSS</span>
+                <div class="proj-links">
+                    <a href="https://github.com/anshuldaksh2016/simple-google-clone">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/simple-google-clone" class="fa fa-github">Source</a>
                 </div>
             </div>
         </div>
 
 
-
-
-        <!--<div class="container">
-            <div class="timeline-item">
-                <div class="timeline-img">
-
-                </div>
-                <div class="timeline-content js--fadeInLeft">
-                    <h2>
-                        Are U a Mirzapur fan ?
-                    </h2>
-                    <div class="date">Nov 2020</div>
-                    <p>
-                        CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur
-                    </p>
-                    <a href="" class="link primary-link"></a>
-                </div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-img">
-
-                </div>
-                <div class="timeline-content js--fadeInLeft">
-                    <h2>
-                        how well do u know me
-                    </h2>
-                    <div class="date">Nov 2020</div>
-                    <p>
-                        CLI app built with Nodejs , javascript . You can send this to your friends
-                    </p>
-                    <a href="" class="link primary-link">Live</a>
-                    <a href="" class="link secondary-link">View Source</a>
-                </div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-img">
-
-                </div>
-                <div class="timeline-content js--fadeInLeft">
-                    <h2>
-                        Github Cards
-                    </h2>
-                    <div class="date">Nov 2020</div>
-                    <p>
-                        Application to fetch the user information from github
-                    </p>
-                    <a href="" class="link secondary-link">View Source</a>
-                </div>
-            </div>-->
 
         </div>
 
 
     </section>
-
-
-
-
 
 
     <footer class="footer">
