--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
     </header>
 
     <!-- About me section start -->
+    <section id="about-me">
+        <h1 id="about-me-heading">
+            About Me
+        </h1>
+        <div class="content">
+            I am Computer Science Enginner who loves to learn new things everyday. Working in Web development as of now
+            .
+            Reach out to me on LinkedIn.
+        </div>
+    </section>
 
 
     <!-- off white section -->
 
     <section class="skill-container">
         <div class="heading">
-            <h1>technologies I know </h1>
+            <h1>Technologies I know </h1>
         </div>
 
         <div class="row">
