--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <nav class="container navigation">
+    <nav class="nav container navigation">
 
-        <div class="nav-brand">Anshul Daksh </div>
+        <div class="nav-brand">Anshul Daksh /></div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link " href="/">home</a>
+                <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-inline">
-                <a class="link link-active" href="/projects.html" active>projects</a>
+                <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-inline">
                 <a class="link" href="/blogs.html">blogs</a>
