--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <!-- About me section start -->
-    <section id="about-me">
+    <!--<section id="about-me">
         <h1 id="about-me-heading">
             About Me
         </h1>
@@ -53,7 +53,7 @@
             .
             Reach out to me on LinkedIn.
         </div>
-    </section>
+    </section>-->
 
 
     <!-- off white section -->
