updated index.html with some styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="card-body">
                     <img src="/images/html2.png">
                     <p>
-                        Basics of Html
+                        Html
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <img src="/images/css2.png" alt="" srcset="">
                     <p>
 
-                        Basics of CSS like flexbox and grid
+                        flexbox and grid
                     </p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                 <div class="card-body">
                     <img src="/images/js.png" alt="" srcset="">
                     <p>
-                        Javascript the Language
+                        Vanilla Javascript
                     </p>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <div class="card-body">
                     <img src="/images/reactjs.png" alt="" srcset="">
                     <p>
-                        Basic knowledge of React
+                        React
                     </p>
                 </div>
             </div>
