hr added in blogs and projects

--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </div>
+        <hr id="hr">
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images" alt="">
@@ -62,6 +63,7 @@
                 </div>
             </div>
         </div>
+        <hr id="hr">
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images/github-cards.png" alt="github-card">
@@ -77,6 +79,8 @@
             </div>
         </div>
 
+        <hr id="hr">
+
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images/google-clone.png" alt="github-card">
@@ -91,7 +95,21 @@
                 </div>
             </div>
         </div>
-
+        <hr id="hr">
+        <div class="proj-card">
+            <div class="proj-img">
+                <!--<img src="/images/google-clone.png" alt="github-card">-->
+            </div>
+            <div class=" proj-content">
+                <h2 class="proj-heading-1">Vanilla JS Projects</h2>
+                <p>Some simple projects using vanilla javascript , css and html. </p>
+                <span>HTML-CSS-Vanilla-JS</span>
+                <div class="proj-links">
+                    <!--<a href="https://github.com/anshuldaksh2016/simple-google-clone">Demo</a>-->
+                    <a href="https://github.com/anshuldaksh2016/Vanilla-Js-Projects" class="fa fa-github">Source</a>
+                </div>
+            </div>
+        </div>
 
 
         </div>
