--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img src="/images/css2.png" alt="" srcset="">
                     <p>
 
-                        flexbox and grid
+                        CSS
                     </p>
                 </div>
             </div>
