--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         </div>
 
         <div class="hero-content">
-            <h3> Hi there </h3>
+            <h3> Hi there , 👋</h3>
             <h1>I am Anshul Daksh</h1>
 
-            <p>An aspiring web developer</p>
+            <p>Web Developer </p>
 
         </div>
     </header>
 
-  
+
 
     <!-- off white section -->
 
