fixed hero content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="hero-content">
             <h3> Hi there , 👋</h3>
-            <h1>I am Anshul Daksh</h1>
+            <h1>I am <span>Anshul</span> </h1>
 
             <p>Web Developer </p>
 
