all fixed to previous

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
 
         <div class="hero-content">
-            <h3> Hi there , 👋</h3>
-            <h1>I am <span>Anshul</span> </h1>
+            <h3> Hi there </h3>
+            <h1>I am Anshul Daksh</h1>
 
-            <p>Web Developer </p>
+            <p>An aspiring web developer</p>
 
         </div>
     </header>
@@ -52,72 +52,94 @@
             <h1>Technologies I know </h1>
         </div>
 
-        <ul class="cards">
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="images/html.svg"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">HTML</h2>
-                        <p class="card_text">Fundamentals of html</p>
-
-                    </div>
+        <div class="row">
+            <div class="card">
+                <div class="card-header">
+                    <h2>HTML</h2>
                 </div>
-            </li>
 
-
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="images/css.svg"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">CSS</h2>
-                        <p class="card_text">Fundamentals of Css</p>
-
-                    </div>
+                <div class="card-body">
+                    <img src="/images/html2.png">
+                    <p>
+                        Html
+                    </p>
                 </div>
-            </li>
+            </div>
 
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="/images/js.png"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">Javascript</h2>
-                        <p class="card_text">Vanilla Javascript</p>
 
-                    </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>CSS</h2>
                 </div>
-            </li>
 
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="/images/Github.webp"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">Git and github</h2>
-                        <p class="card_text">Version control with git and github</p>
+                <div class="card-body">
+                    <img src="/images/css2.png" alt="" srcset="">
+                    <p>
 
-                    </div>
+                        CSS
+                    </p>
                 </div>
-            </li>
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="/images/reactjs.png"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">React</h2>
-                        <p class="card_text">Reactjs library</p>
+            </div>
 
-                    </div>
-                </div>
-            </li>
-            <li class="cards_item">
-                <div class="card">
-                    <div class="card_image"><img src="/images/programming_nodejs_icon-128.png"></div>
-                    <div class="card_content">
-                        <h2 class="card_title">Node</h2>
-                        <p class="card_text">Nodejs and Express server side programming</p>
 
-                    </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Javascript</h2>
                 </div>
-            </li>
-        </ul>
+
+                <div class="card-body">
+                    <img src="/images/js.png" alt="" srcset="">
+                    <p>
+                        Vanilla Javascript
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>Git and github</h2>
+                </div>
+
+                <div class="card-body">
+                    <img src="/images/Github.webp" alt="" srcset="">
+                    <p>
+                        Version control with git and github
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>React</h2>
+                </div>
+
+                <div class="card-body">
+                    <img src="/images/reactjs.png" alt="" srcset="">
+                    <p>
+                        React
+                    </p>
+                </div>
+            </div>
+
+
+
+            <div class="card">
+                <div class="card-header">
+                    <h2> Node</h2>
+                </div>
+
+                <div class="card-body">
+                    <img src="/images/programming_nodejs_icon-128.png" alt="" srcset="">
+                    <p>
+                        Nodejs and Express server side programming
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
 
     </section>
 
