hero-content fix

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         </div>
 
         <div class="hero-content">
-            <h3> Hi there </h3>
-            <h1>I am Anshul Daksh</h1>
-
-            <p>An aspiring web developer</p>
+            <h3> Hi there,👋 </h3>
+            <h1>I am Anshul </h1>
+            <p>Web developer</p>
 
         </div>
     </header>
