--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     LinkedIn</a>
             </li>
             <li class="list-inline">
-                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">github</a></li>
+                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">Github</a></li>
 
             <li class="list-inline">
                 <a class="link fa fa-youtube"
