fix:link active on pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-brand">Anshul Daksh /></div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link" href="/">home</a>
             </li>
             <li class="list-inline">
                 <a class="link" href="/projects.html">projects</a>
@@ -140,26 +140,6 @@
 
 
     </section>
-
-    <!--<section class="section ow">
-        <div class="container container-centered">
-            <h1>projects</h1>
-            <p>I like to showcase my work so my projects are
-                hosted online
-            </p>
-            <a href="/" class="link primary-link">See Projects</a>
-        </div>
-    </section>
-
-    <section class="section ow">
-        <div class="container container-centered">
-            <h1>Blogs</h1>
-            <p>I have written some blogs
-                so check them out .. </p>
-            <a href="/" class="link secondary-link">Browse Blogs</a>
-        </div>
-    </section>-->
-
 
     <footer class="footer">
         <div class="footer-header">Online Presence </div>
