--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
         <div class="nav-brand">Anshul Daksh /></div>
         <ul class="non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link" href="/">home</a>
             </li>
             <li class="list-inline">
                 <a class="link" href="/projects.html">projects</a>
